--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="color-scheme" content="light only">
 	<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG></o:AllowPNG></o:OfficeDocumentSettings></xml><![endif]-->
 	<style>
 		* {
@@ -14,7 +15,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			background: #fff;
+			background-color: #fff !important;
 		}
 
 		a[x-apple-data-detectors] {
