--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 			box-sizing: border-box
 		}
 
+		:root {
+			color-scheme: light;
+		}
+
 		body {
 			margin: 0;
 			padding: 0;
-			background-color: #fff !important;
+			background-color: #030303 !important;
 		}
 
 		a[x-apple-data-detectors] {
